--- a/LRAtsSDKSample/app/src/main/AndroidManifest.xml
+++ b/LRAtsSDKSample/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name="com.liveramp.ats_sdk_android.sample.internal.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
